--- a/views/index.pug
+++ b/views/index.pug
@@ -5,7 +5,7 @@ block content
   p Welcome to Rahul Guntu
   button(type="button",class="btn btn-success", onclick="doReduce()") Press Me
   div(id="reduce") Reduce the value 
-  a(href='http://localhost:3000/jewerly') Link
+  a(href='http://localhost:3000/costume') Link
   script.
    let count=20
    let change=-1
