--- a/views/index.pug
+++ b/views/index.pug
@@ -1,18 +1,13 @@
 extends layout
 
-block content
-  h1= title
-  p Welcome to Rahul Guntu
-  button(type="button",class="btn btn-success", onclick="doReduce()") Press Me
-  div(id="reduce") Reduce the value 
-  a(href='http://localhost:3000/costume') Link
-  script.
-   let count=20
-   let change=-1
-   function doReduce(){
-    count+=change;
-    change-=1;
-    document.getElementById('reduce').innerHTML=`Count ${count} with change ${change}`
-    console.log(count
-    )
-   }
+block content 
+  //- a(href='costume') costume
+  if (!user)
+    a(href="/login") Login
+    br
+    a(href="/register") Register
+  if (user)
+    p You are currently logged in as #{user.username}
+    a(href="/costume") Take me to costume
+    br
+    a(href="/logout") Logout
